did some very basic flex styling and solved a very long bug related to promises

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- Meyer Reset -->
-    <link rel="stylesheet" href="/reset.css">
-
-   
+    <!-- Normalize.css -->
+    <link rel="stylesheet" href="/normalize.css" />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -26,10 +24,10 @@
     <title>React App</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLe6i3IQNXBXa_BftIiir_rIWpRNm2m-c"
-    async
-    defer
-  ></script>
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLe6i3IQNXBXa_BftIiir_rIWpRNm2m-c"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
