integrated autocomplete from google maps. NEXT: Handle form submission

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,13 @@
     -->
     <title>React App</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script
+    <!-- <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLe6i3IQNXBXa_BftIiir_rIWpRNm2m-c"
+      async
+      defer
+    ></script> -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLe6i3IQNXBXa_BftIiir_rIWpRNm2m-c&libraries=places"
       async
       defer
     ></script>
