--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       async
       defer
     ></script>
+    <link href="https://fonts.cdnfonts.com/css/circular-std" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
